# lab-04-boost-filesystem

./: CMakeLists.txt
include/: Fin_Inf.h  header.hpp
sources/: Fin_Inf.cpp  main.cpp  source.cpp
tests/: test.cpp
